<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <app.banking.bankmuscat.merchant.components.widgets.RobotoEditText
                android:id="@+id/mobile"
                android:inputType="number"
                android:maxLength="8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mobile" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <app.banking.bankmuscat.merchant.components.widgets.RobotoEditText
                android:id="@+id/amount"
                android:inputType="number"
                android:maxLength="8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enteramount" />

        </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/otp_footer_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <app.banking.bankmuscat.merchant.components.widgets.RobotoButton
            android:id="@+id/mob_buttoncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_change_selector"
            android:text="@string/cancel_button_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:typeface="roboto_condensed_bold" />

        <!--         <ImageView -->
        <!--             android:id="@+id/imageView1" -->
        <!--             android:layout_width="1dp" -->
        <!--             android:layout_height="wrap_content" -->
        <!--             android:contentDescription="@string/content_description_divider" -->
        <!--             android:src="@drawable/divider" /> -->

        <app.banking.bankmuscat.merchant.components.widgets.RobotoButton
            android:id="@+id/mob_buttonnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="0.1dp"
            android:background="@drawable/button_change_selector"
            android:text="@string/next_button_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:typeface="roboto_condensed_bold" />
    </LinearLayout>

    </RelativeLayout>

