<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/amount"
            android:inputType="number"
            android:maxLength="7"
            android:ellipsize="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enteramount" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:gravity="start"
            android:ellipsize="start"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:hint="@string/invoice_number" />

    </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                >
            <app.banking.bankmuscat.merchant.components.widgets.RobotoButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_change_selector"
                android:textColor="@color/white"
                android:id="@+id/generate"
                android:text="@string/change_pin_title"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>