<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="28sp"
            android:layout_below="@+id/wish"
            android:id="@+id/amount"
            android:gravity="center"

            android:text="RO 400.00"/>
        <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
            android:layout_width="match_parent"
            android:id="@+id/payee"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_below="@+id/amount"
            android:gravity="center"
            android:text="#payee"/>

        <LinearLayout
            android:id="@+id/otp_footer_rel_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <app.banking.bankmuscat.merchant.components.widgets.RobotoButton
                android:id="@+id/mob_buttoncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_change_selector"
                android:text="@string/cancel_button_text"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:typeface="roboto_condensed_bold" />

            <!--         <ImageView -->
            <!--             android:id="@+id/imageView1" -->
            <!--             android:layout_width="1dp" -->
            <!--             android:layout_height="wrap_content" -->
            <!--             android:contentDescription="@string/content_description_divider" -->
            <!--             android:src="@drawable/divider" /> -->

            <app.banking.bankmuscat.merchant.components.widgets.RobotoButton
                android:id="@+id/mob_buttonnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="0.1dp"
                android:background="@drawable/button_change_selector"
                android:text="@string/next_button_text"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:typeface="roboto_condensed_bold" />
        </LinearLayout>

        <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
            android:text="@string/merchant_details"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView11" />

        <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
            android:text="Mobile:   "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:id="@+id/mmobile" />

        <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
            android:text="Merchant Code :  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mmobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:id="@+id/mcode" />

        <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:id="@+id/wish"
            android:text="@string/do_you"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
    <app.banking.bankmuscat.merchant.components.widgets.RobotoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_gravity="top"
        android:gravity="center"
        android:text="@string/confirmation"/>
    </LinearLayout>


</LinearLayout>